[build-system]
requires = ["setuptools>=77.0.1", "grpcio-tools>=1.78.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pkapi"
version = "0.1.0"
description = "Protocol Buffer API stubs for the PK Engine Dealer service"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "grpcio>=1.78.0",
    "protobuf>=6.31.1",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.78.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
